--- a/KrausxRGA/UI/wndProcessedReturn.xaml
+++ b/KrausxRGA/UI/wndProcessedReturn.xaml
@@ -219,7 +219,7 @@
                         </DataGrid.RowValidationErrorTemplate>
                     </DataGrid>-->
 
-                    <ComboBox Canvas.Left="121" Canvas.Top="108" Width="200" Height="45" x:Name="cmbSearchBy" BorderBrush="Black" FontSize="20" SelectionChanged="cmbSearchBy_SelectionChanged_1" >
+                    <ComboBox Canvas.Left="121" Canvas.Top="78" Width="200" Height="45" x:Name="cmbSearchBy" BorderBrush="Black" FontSize="20" SelectionChanged="cmbSearchBy_SelectionChanged_1" >
                         <ComboBoxItem Name="clear" FontSize="20">All-Clear Search</ComboBoxItem>
                         <ComboBoxItem Name="rganumber" FontSize="20">RGA Number</ComboBoxItem>
                         <ComboBoxItem Name="SRnumber" FontSize="20" >SR Number</ComboBoxItem>
@@ -228,17 +228,30 @@
                        
                     </ComboBox>
 
-                    <TextBox Width="319" Canvas.Left="408" Canvas.Top="110" Height="45" x:Name="txtsearch" BorderBrush="Black" KeyDown="txtsearch_KeyDown" TextChanged="txtsearch_TextChanged_1" FontSize="20" Visibility="Hidden"/>
+                    <ComboBox Canvas.Left="135" Canvas.Top="140" Width="317" Height="45" x:Name="cmbSortBy" BorderBrush="Black" FontSize="20" SelectionChanged="cmbSortBy_SelectionChanged_1">
+                        <ComboBoxItem Name="RMA" FontSize="20" Width="307">SR Number</ComboBoxItem>
+                        <ComboBoxItem Name="PO" FontSize="20" Width="307">PO Number</ComboBoxItem>
+                        <ComboBoxItem Name="ReturnDate" FontSize="20" Width="307">Return Date</ComboBoxItem>
+                        <ComboBoxItem Name="ProcessedDate" FontSize="20" Width="307">Processed Date</ComboBoxItem>
+                        <ComboBoxItem Name="RGA" FontSize="20" Width="307">RGA Number</ComboBoxItem>
+                        <ComboBoxItem Name="RMAstatus" FontSize="20" Width="307">RMA Status</ComboBoxItem>
+                        <ComboBoxItem Name="ProgressFlag" FontSize="20" Width="307">Progress Flag</ComboBoxItem>
+
+
+
+                    </ComboBox>
+
+                    <TextBox Width="319" Canvas.Left="408" Canvas.Top="80" Height="45" x:Name="txtsearch" BorderBrush="Black" KeyDown="txtsearch_KeyDown" TextChanged="txtsearch_TextChanged_1" FontSize="20" Visibility="Hidden"/>
                     
-                    <ListBox Height="155" Width="319" Canvas.Left="408" Canvas.Top="155" x:Name="lstSearch" FontSize="20" Visibility="Hidden" SelectionChanged="lstSearch_SelectionChanged_1"/>
+                    <ListBox Height="155" Width="319" Canvas.Left="408" Canvas.Top="125" x:Name="lstSearch" FontSize="20" Visibility="Hidden" SelectionChanged="lstSearch_SelectionChanged_1"/>
                     <!--<RadioButton Content="All" FontSize="25" Canvas.Left="32" Canvas.Top="72" x:Name="rbtAll" IsChecked="True" Checked="rbtAll_Checked_1" Visibility="Hidden" />
                     <RadioButton Content="Between Date" FontSize="25" Canvas.Left="114" Canvas.Top="72" x:Name="rbtBetween" Checked="rbtBetween_Checked_1" Visibility="Hidden"/>-->
                     <Canvas x:Name="canvasdate" Visibility="Hidden" Canvas.Top="44">
                     
-                    <Label Height="39" Width="67" Canvas.Left="334" Canvas.Top="68" Content="From" FontSize="25" />
-                    <DatePicker Canvas.Top="78" Canvas.Left="408" Width="159" FontSize="15" Height="25" CalendarStyle="{StaticResource styleCalendar}" x:Name="dtpfrom" IsEnabled="True" SelectedDateChanged="dtpfrom_SelectedDateChanged" />
-                    <Label Height="43" Width="37" Canvas.Left="574" Canvas.Top="68" Content="To" FontSize="25" />
-                    <DatePicker Canvas.Top="78" Canvas.Left="618" Width="171" FontSize="15" Height="25" CalendarStyle="{StaticResource styleCalendar}" x:Name="dtpto" IsEnabled="True" SelectedDateChanged="dtpto_SelectedDateChanged" />
+                    <Label Height="39" Width="67" Canvas.Left="334" Canvas.Top="36" Content="From" FontSize="25" />
+                    <DatePicker Canvas.Top="46" Canvas.Left="408" Width="159" FontSize="15" Height="25" CalendarStyle="{StaticResource styleCalendar}" x:Name="dtpfrom" IsEnabled="True" SelectedDateChanged="dtpfrom_SelectedDateChanged" />
+                    <Label Height="43" Width="37" Canvas.Left="574" Canvas.Top="36" Content="To" FontSize="25" />
+                    <DatePicker Canvas.Top="46" Canvas.Left="618" Width="171" FontSize="15" Height="25" CalendarStyle="{StaticResource styleCalendar}" x:Name="dtpto" IsEnabled="True" SelectedDateChanged="dtpto_SelectedDateChanged" />
 
                     </Canvas>
 
@@ -251,7 +264,9 @@
                                     			Click="btnback_Click"  Width="179"  />
                         </StackPanel>
                     </Border>
-                    <Label Height="51" Width="122" Canvas.Top="102" Content="Search By" FontSize="25" Canvas.Left="-2" />
+                    <Label Height="51" Width="122" Canvas.Top="76" Content="Search By" FontSize="25" Canvas.Left="-2" />
+
+                    <Label Height="51" Width="122" Canvas.Top="136" Content="Sorting By" FontSize="25" />
 
                 </Canvas>
             </Border>
