--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -422,7 +422,7 @@
                                     <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="382" Height="56" Width="234" Canvas.Left="556" >
                                         <StackPanel Orientation="Horizontal">
                                             <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSave.png" MouseDown="btnHomeDone_Click" Width="59"/>
-                                            <Button Style="{StaticResource ToolBarButtonBaseStyle}" x:Name="btnHomeDone" Content="Done" Click="btnHomeDone_Click" Width="169"  />
+                                            <Button Style="{StaticResource ToolBarButtonBaseStyle}" x:Name="btnHomeDone" Content="Save" Click="btnHomeDone_Click" Width="169"  />
                                         </StackPanel>
                                     </Border>
                                     <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="382" Height="56" Width="218" >
